--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+setuptools==65.5.1
+wheel==0.38.4
+pip==23.1.2
 absl-py==0.13.0
 asgiref==3.2.10
 astunparse==1.6.3
@@ -46,3 +49,4 @@ urllib3==1.26.5
 Werkzeug==2.0.1
 wrapt==1.12.1
 zipp==3.4.1
+
