--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,60 @@
-setuptools==65.5.1
-wheel==0.38.4
-pip==23.1.2
-absl-py==0.13.0
-asgiref==3.2.10
-astunparse==1.6.3
-cached-property==1.5.2
-cachetools==4.2.2
-certifi==2021.5.30
-chardet==4.0.0
-Django==3.1
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.31.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.34.1
-gunicorn==20.1.0
-h5py>=3.8.0
-idna==2.10
-importlib-metadata==4.5.0
-keras-nightly==2.5.0.dev2021032900
+# Build tools
+setuptools>=61.0.0
+wheel>=0.38.4
+pip>=23.0.1
+
+# TensorFlow and Keras
+tensorflow-cpu==2.10.0
+tensorflow-estimator==2.10.0
+keras-nightly==2.10.0
 Keras-Preprocessing==1.1.2
-Markdown==3.3.4
-numpy==1.19.5
-oauthlib==3.1.1
+astunparse==1.6.3
+gast==0.4.0
 opt-einsum==3.3.0
-pandas==1.2.4
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scipy==1.6.3
-six==1.15.0
-sqlparse==0.4.1
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow-cpu==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.5
-Werkzeug==2.0.1
-wrapt==1.12.1
-zipp==3.4.1
+flatbuffers==1.12
+h5py>=3.1.0
 
+# Django stack
+Django==3.2.20
+asgiref==3.6.0
+gunicorn==20.1.0
+sqlparse==0.4.3
 
+# Data & utilities
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.7.0
+cachetools>=4.2.2
+cached-property>=1.5.2
+PyYAML>=5.4.1
+Markdown>=3.3.4
+requests>=2.25.1
+idna>=2.10
+certifi>=2021.5.30
+chardet>=4.0.0
+urllib3>=1.26.5
+python-dateutil>=2.8.1
+pytz>=2021.1
+typing-extensions>=3.7.4.3
 
+# Google / Auth
+google-auth>=2.16.0
+google-auth-oauthlib>=0.7.0
+google-pasta>=0.2.0
+grpcio>=1.44.0
+oauthlib>=3.2.2
+requests-oauthlib>=1.3.1
+rsa>=4.9
+pyasn1>=0.4.8
+pyasn1-modules>=0.2.8
+
+# TensorBoard (optional, for logs)
+tensorboard>=2.10.0
+tensorboard-data-server>=0.6.1
+tensorboard-plugin-wit>=1.8.1
+
+# Misc
+termcolor>=1.1.0
+Werkzeug>=2.2.3
+wrapt>=1.14.0
+importlib-metadata>=4.13.0
