--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-# Build tools
 setuptools>=61.0.0
 wheel>=0.38.4
 pip>=23.0.1
 
-# TensorFlow and Keras
-tensorflow-cpu==2.10.0
-tensorflow-estimator==2.10.0
+# TensorFlow & Keras
+tensorflow-cpu==2.10.1
 keras-nightly==2.10.0
 Keras-Preprocessing==1.1.2
 astunparse==1.6.3
 gast==0.4.0
-opt-einsum==3.3.0
 flatbuffers==1.12
 h5py>=3.1.0
+opt-einsum==3.3.0
 
 # Django stack
 Django==3.2.20
@@ -20,7 +18,7 @@ asgiref==3.6.0
 gunicorn==20.1.0
 sqlparse==0.4.3
 
-# Data & utilities
+# Utilities
 numpy>=1.21.0
 pandas>=1.3.0
 scipy>=1.7.0
@@ -48,7 +46,7 @@ rsa>=4.9
 pyasn1>=0.4.8
 pyasn1-modules>=0.2.8
 
-# TensorBoard (optional, for logs)
+# TensorBoard (optional)
 tensorboard>=2.10.0
 tensorboard-data-server>=0.6.1
 tensorboard-plugin-wit>=1.8.1
