--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,45 @@
-setuptools>=61.0.0
+setuptools>=65.5.1
 wheel>=0.38.4
-pip>=23.0.1
-
-# TensorFlow & Keras
+pip>=23.1.2
+Django==3.1
+gunicorn==20.1.0
+numpy==1.23.5
+pandas==1.5.3
+scipy==1.10.1
 tensorflow-cpu==2.10.0
-keras-nightly==2.10.0
+h5py>=3.8.0
 Keras-Preprocessing==1.1.2
 astunparse==1.6.3
-gast==0.4.0
-flatbuffers==1.12
-h5py>=3.1.0
-opt-einsum==3.3.0
-
-# Django stack
-Django==3.2.20
-asgiref==3.6.0
-gunicorn==20.1.0
-sqlparse==0.4.3
-
-# Utilities
-numpy>=1.21.0
-pandas>=1.3.0
-scipy>=1.7.0
-cachetools>=4.2.2
-cached-property>=1.5.2
-PyYAML>=5.4.1
-Markdown>=3.3.4
-requests>=2.25.1
-idna>=2.10
-certifi>=2021.5.30
-chardet>=4.0.0
-urllib3>=1.26.5
-python-dateutil>=2.8.1
-pytz>=2021.1
-typing-extensions>=3.7.4.3
-
-# Google / Auth
-google-auth>=2.16.0
-google-auth-oauthlib>=0.7.0
-google-pasta>=0.2.0
-grpcio>=1.44.0
-oauthlib>=3.2.2
-requests-oauthlib>=1.3.1
-rsa>=4.9
-pyasn1>=0.4.8
-pyasn1-modules>=0.2.8
-
-# TensorBoard (optional)
-tensorboard>=2.10.0
-tensorboard-data-server>=0.6.1
-tensorboard-plugin-wit>=1.8.1
-
-# Misc
-termcolor>=1.1.0
-Werkzeug>=2.2.3
-wrapt>=1.14.0
-importlib-metadata>=4.13.0
-
+absl-py==1.4.0
+cached-property==1.5.2
+cachetools==5.3.0
+certifi==2023.7.22
+chardet==5.2.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+grpcio==1.57.0
+idna==3.4
+importlib-metadata==6.8
+Markdown==3.5.3
+oauthlib==3.2.2
+protobuf==4.24.3
+pyasn1==0.5.0
+pyasn1-modules==0.5.0
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+sqlparse==0.4.4
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.10.0
+termcolor==2.3.0
+typing-extensions==4.7.1
+urllib3==1.26.16
+Werkzeug==2.3.7
+wrapt==1.15.0
+zipp==3.15.0
