--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+# Core packaging
 setuptools>=65.5.1
 wheel>=0.38.4
 pip>=23.1.2
 
+# Django & web server
 Django==3.1
 gunicorn==20.1.0
+
+# Data science / ML
 numpy==1.23.5
 pandas==1.2.4
 scipy==1.6.3
@@ -13,6 +17,8 @@ tensorflow-estimator==2.10.0
 tensorboard==2.10.1
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
+
+# Supporting libraries
 absl-py==0.13.0
 grpcio==1.34.1
 protobuf==3.17.3
