--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,12 @@
-# Core packaging
 setuptools>=65.5.1
 wheel>=0.38.4
 pip>=23.1.2
-
-# Django & web server
 Django==3.1
 gunicorn==20.1.0
-
-# Data science / ML
 numpy==1.23.5
 pandas==1.2.4
 scipy==1.6.3
 h5py==3.1.0
 tensorflow-cpu==2.10.1
 tensorflow-estimator==2.10.0
-tensorboard==2.10.1
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-
-# Supporting libraries
-absl-py==0.13.0
-grpcio==1.34.1
-protobuf==3.17.3
-six==1.15.0
-termcolor==1.1.0
-werkzeug==2.0.1
-wrapt==1.12.1
-opt-einsum==3.3.0
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-certifi==2021.5.30
-chardet==4.0.0
-idna==2.10
-urllib3==1.26.5
-sqlparse==0.4.1
+keras-preprocessing==1.1.2
