--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ pip>=23.1.2
 Django==3.1
 gunicorn==20.1.0
 numpy==1.23.5
-tensorflow-cpu==2.10.1
+# If you use TensorFlow:
+# tensorflow-cpu==2.10.1
