--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-setuptools>=65.5.1
-wheel>=0.38.4
-pip>=23.1.2
-Django==3.1
-gunicorn==20.1.0
-numpy==1.23.5
-# If you use TensorFlow:
-# tensorflow-cpu==2.10.1
+setuptools>=80.9.0
+wheel>=0.45.1
+pip>=25.3
+Django>=4.2.8
+gunicorn>=20.2.0
+numpy>=1.27.0
